RESOLVED FIXED78518
DFG should not check the types of arguments that are dead
https://bugs.webkit.org/show_bug.cgi?id=78518
Summary DFG should not check the types of arguments that are dead
Filip Pizlo
Reported 2012-02-13 12:45:15 PST
Patch forthcoming.
Attachments
the patch (3.18 KB, patch)
2012-02-13 13:23 PST, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2012-02-13 13:23:06 PST
Created attachment 126815 [details] the patch
Geoffrey Garen
Comment 2 2012-02-13 13:24:14 PST
Comment on attachment 126815 [details] the patch r=me
Filip Pizlo
Comment 3 2012-02-16 02:10:16 PST
Note You need to log in before you can comment on or make changes to this bug.