DFG should not check the types of arguments that are dead https://bugs.webkit.org/show_bug.cgi?id=78518

Reviewed by Geoff Garen.

The argument checks are now elided if the corresponding SetArgument is dead,
and the abstract value of the argument is set to bottom (None, []). This is
performance neutral on the benchmarks we currently track.

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::initialize):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::checkArgumentTypes):



Canonical link: https://commits.webkit.org/95748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107912 268f45cc-cd09-0410-ab3c-d52691b4dbfc